# kafka_consumer_websockets

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml
config/: .env.dev  entrypoint.sh
docker/: Dockerfile.consumer  docker-compose.yaml
src/: server.py
src/tests/: client.py
src/utils/: config_utils.py  log_service.py
